@@ -76,17 +76,16 @@ import org.junit.jupiter.api.Test;
 import org.opensearch.sql.ast.dsl.AstDSL;
 import org.opensearch.sql.ast.expression.Argument;
 import org.opensearch.sql.ast.expression.DataType;
-import org.opensearch.sql.ast.expression.Field;
 import org.opensearch.sql.ast.expression.HighlightFunction;
 import org.opensearch.sql.ast.expression.Literal;
 import org.opensearch.sql.ast.expression.ParseMethod;
 import org.opensearch.sql.ast.expression.PatternMethod;
+import org.opensearch.sql.ast.expression.PatternMode;
 import org.opensearch.sql.ast.expression.ScoreFunction;
 import org.opensearch.sql.ast.expression.SpanUnit;
 import org.opensearch.sql.ast.tree.AD;
 import org.opensearch.sql.ast.tree.CloseCursor;
 import org.opensearch.sql.ast.tree.FetchCursor;
-import org.opensearch.sql.ast.tree.FillNull;
 import org.opensearch.sql.ast.tree.Kmeans;
 import org.opensearch.sql.ast.tree.ML;
 import org.opensearch.sql.ast.tree.Paginate;
@@ -161,12 +160,7 @@ class AnalyzerTest extends AnalyzerTestBase {
 
     ExpressionEvaluationException exception =
         assertThrows(ExpressionEvaluationException.class, () -> analyze(typeMismatchPlan));
-    assertEquals(
-        "= function expected {[BYTE,BYTE],[SHORT,SHORT],[INTEGER,INTEGER],[LONG,LONG],"
-            + "[FLOAT,FLOAT],[DOUBLE,DOUBLE],[STRING,STRING],[BOOLEAN,BOOLEAN],[DATE,DATE],"
-            + "[TIME,TIME],[TIMESTAMP,TIMESTAMP],[INTERVAL,INTERVAL],[IP,IP],"
-            + "[STRUCT,STRUCT],[ARRAY,ARRAY]}, but got [STRING,INTEGER]",
-        exception.getMessage());
+    assertEquals(getIncompatibleTypeErrMsg(STRING, INTEGER), exception.getMessage());
   }
 
   @Test
@@ -1027,6 +1021,7 @@ class AnalyzerTest extends AnalyzerTestBase {
             LogicalPlanDSL.window(
                 LogicalPlanDSL.sort(
                     LogicalPlanDSL.relation("test", table),
+                    0,
                     ImmutablePair.of(DEFAULT_ASC, DSL.ref("string_value", STRING)),
                     ImmutablePair.of(DEFAULT_ASC, DSL.ref("integer_value", INTEGER))),
                 DSL.named("window_function", DSL.rowNumber()),
@@ -1402,14 +1397,11 @@ class AnalyzerTest extends AnalyzerTestBase {
             ImmutablePair.of(
                 DSL.ref("int_null_value", INTEGER),
                 DSL.ifnull(DSL.ref("int_null_value", INTEGER), DSL.literal(0)))),
-        new FillNull(
+        AstDSL.fillNull(
             AstDSL.relation("schema"),
-            FillNull.ContainNullableFieldFill.ofSameValue(
-                AstDSL.intLiteral(0),
-                ImmutableList.<Field>builder()
-                    .add(AstDSL.field("integer_value"))
-                    .add(AstDSL.field("int_null_value"))
-                    .build())));
+            AstDSL.intLiteral(0),
+            AstDSL.field("integer_value"),
+            AstDSL.field("int_null_value")));
   }
 
   @Test
@@ -1423,14 +1415,11 @@ class AnalyzerTest extends AnalyzerTestBase {
             ImmutablePair.of(
                 DSL.ref("int_null_value", INTEGER),
                 DSL.ifnull(DSL.ref("int_null_value", INTEGER), DSL.literal(1)))),
-        new FillNull(
+        AstDSL.fillNull(
             AstDSL.relation("schema"),
-            FillNull.ContainNullableFieldFill.ofVariousValue(
-                ImmutableList.of(
-                    new FillNull.NullableFieldFill(
-                        AstDSL.field("integer_value"), AstDSL.intLiteral(0)),
-                    new FillNull.NullableFieldFill(
-                        AstDSL.field("int_null_value"), AstDSL.intLiteral(1))))));
+            List.of(
+                Pair.of(AstDSL.field("integer_value"), AstDSL.intLiteral(0)),
+                Pair.of(AstDSL.field("int_null_value"), AstDSL.intLiteral(1)))));
   }
 
   @Test
@@ -1477,6 +1466,7 @@ class AnalyzerTest extends AnalyzerTestBase {
         LogicalPlanDSL.trendline(
             LogicalPlanDSL.sort(
                 LogicalPlanDSL.relation("schema", table),
+                0,
                 Pair.of(
                     new SortOption(SortOrder.ASC, NullOrder.NULL_FIRST),
                     DSL.ref("float_value", ExprCoreType.FLOAT))),
@@ -1821,70 +1811,71 @@ class AnalyzerTest extends AnalyzerTestBase {
   }
 
   @Test
-  public void simple_pattern_window_function_with_no_additional_args() {
-    UnresolvedPlan unresolvedWindow =
-        AstDSL.project(
-            AstDSL.window(
-                AstDSL.relation("schema"),
-                PatternMethod.SIMPLE_PATTERN,
-                AstDSL.field("string_value"),
-                "patterns_field",
-                ImmutableList.of()),
-            AstDSL.field("string_value"));
-    LogicalPlan expectedPlan =
-        LogicalPlanDSL.project(
-            LogicalPlanDSL.window(
-                LogicalPlanDSL.relation("schema", table),
-                DSL.named(
-                    "patterns_field",
-                    DSL.simple_pattern(DSL.ref("string_value", STRING)),
-                    "patterns_field"),
-                new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
-            DSL.named("string_value", DSL.ref("string_value", STRING)));
+  public void parse_relation_with_patterns_expression() {
+    Map<String, Literal> arguments =
+        ImmutableMap.<String, Literal>builder()
+            .put("new_field", AstDSL.stringLiteral("custom_field"))
+            .put("pattern", AstDSL.stringLiteral("custom_pattern"))
+            .build();
 
-    assertAnalyzeEqual(expectedPlan, unresolvedWindow);
-  }
-
-  @Test
-  public void simple_pattern_window_function() {
-    UnresolvedPlan unresolvedWindow =
-        AstDSL.project(
-            AstDSL.window(
-                AstDSL.relation("schema"),
-                PatternMethod.SIMPLE_PATTERN,
-                AstDSL.field("string_value"),
-                "custom_field",
-                ImmutableList.of(
-                    new Argument(
-                        "pattern", AstDSL.stringLiteral("[0-9]")))), // with pattern argument
-            AstDSL.field("string_value"));
-    LogicalPlan expectedPlan =
+    assertAnalyzeEqual(
         LogicalPlanDSL.project(
-            LogicalPlanDSL.window(
-                LogicalPlanDSL.relation("schema", table),
+            LogicalPlanDSL.relation("schema", table),
+            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
+            ImmutableList.of(
                 DSL.named(
                     "custom_field",
-                    DSL.simple_pattern(
+                    DSL.patterns(
                         DSL.ref("string_value", STRING),
-                        DSL.namedArgument(
-                            "pattern", DSL.literal("[0-9]"))), // with additional pattern argument
-                    "custom_field"),
-                new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
-            DSL.named("string_value", DSL.ref("string_value", STRING)));
-
-    assertAnalyzeEqual(expectedPlan, unresolvedWindow);
+                        DSL.literal("custom_pattern"),
+                        DSL.literal("custom_field"))))),
+        AstDSL.project(
+            AstDSL.parse(
+                AstDSL.relation("schema"),
+                ParseMethod.PATTERNS,
+                AstDSL.field("string_value"),
+                AstDSL.stringLiteral("custom_pattern"),
+                arguments),
+            AstDSL.alias("string_value", qualifiedName("string_value"))));
   }
 
   @Test
-  public void brain_window_function_with_no_additional_args() {
-    UnresolvedPlan unresolvedWindow =
+  public void parse_relation_with_patterns_expression_no_args() {
+    assertAnalyzeEqual(
+        LogicalPlanDSL.project(
+            LogicalPlanDSL.relation("schema", table),
+            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
+            ImmutableList.of(
+                DSL.named(
+                    "patterns_field",
+                    DSL.patterns(
+                        DSL.ref("string_value", STRING),
+                        DSL.literal(""),
+                        DSL.literal("patterns_field"))))),
         AstDSL.project(
-            AstDSL.window(
+            AstDSL.parse(
                 AstDSL.relation("schema"),
-                PatternMethod.BRAIN,
+                ParseMethod.PATTERNS,
                 AstDSL.field("string_value"),
+                AstDSL.stringLiteral(""),
+                ImmutableMap.of()),
+            AstDSL.alias("string_value", qualifiedName("string_value"))));
+  }
+
+  @Test
+  public void brain_patterns_command_with_no_additional_args() {
+    UnresolvedPlan patterns =
+        AstDSL.project(
+            AstDSL.patterns(
+                AstDSL.relation("schema"),
+                AstDSL.field("string_value"),
+                ImmutableList.of(),
                 "patterns_field",
-                ImmutableList.of()),
+                PatternMethod.BRAIN,
+                PatternMode.LABEL,
+                AstDSL.intLiteral(10),
+                AstDSL.intLiteral(100000),
+                ImmutableMap.of()),
             AstDSL.field("string_value"));
     LogicalPlan expectedPlan =
         LogicalPlanDSL.project(
@@ -1895,24 +1886,27 @@ class AnalyzerTest extends AnalyzerTestBase {
                 new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
             DSL.named("string_value", DSL.ref("string_value", STRING)));
 
-    assertAnalyzeEqual(expectedPlan, unresolvedWindow);
+    assertAnalyzeEqual(expectedPlan, patterns);
   }
 
   @Test
-  public void brain_window_function() {
-    UnresolvedPlan unresolvedWindow =
+  public void brain_patterns_command() {
+    UnresolvedPlan patterns =
         AstDSL.project(
-            AstDSL.window(
+            AstDSL.patterns(
                 AstDSL.relation("schema"),
-                PatternMethod.BRAIN,
                 AstDSL.field("string_value"),
+                ImmutableList.of(),
                 "custom_field",
-                ImmutableList.of(
-                    new Argument(
-                        "variable_count_threshold", AstDSL.intLiteral(10)), // with integer argument
-                    new Argument(
-                        "frequency_threshold_percentage",
-                        AstDSL.doubleLiteral(0.1)) // with double argument
+                PatternMethod.BRAIN,
+                PatternMode.LABEL,
+                AstDSL.intLiteral(10),
+                AstDSL.intLiteral(100000),
+                ImmutableMap.of(
+                    "variable_count_threshold",
+                    AstDSL.intLiteral(10), // with integer argument
+                    "frequency_threshold_percentage",
+                    AstDSL.doubleLiteral(0.1) // with double argument
                     )),
             AstDSL.field("string_value"));
     LogicalPlan expectedPlan =
@@ -1924,15 +1918,29 @@ class AnalyzerTest extends AnalyzerTestBase {
                     DSL.brain(
                         DSL.ref("string_value", STRING),
                         DSL.namedArgument(
-                            "variable_count_threshold",
-                            DSL.literal(10)), // with additional integer argument
-                        DSL.namedArgument(
                             "frequency_threshold_percentage",
-                            DSL.literal(0.1))), // with additional double argument
+                            DSL.literal(0.1)), // with additional double argument
+                        DSL.namedArgument(
+                            "variable_count_threshold",
+                            DSL.literal(10))), // with additional integer argument
                     "custom_field"),
                 new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
             DSL.named("string_value", DSL.ref("string_value", STRING)));
 
-    assertAnalyzeEqual(expectedPlan, unresolvedWindow);
+    assertAnalyzeEqual(expectedPlan, patterns);
+  }
+
+  @Test
+  public void regex_command_throws_unsupported_exception_with_legacy_engine() {
+    UnsupportedOperationException exception =
+        assertThrows(
+            UnsupportedOperationException.class,
+            () ->
+                analyze(
+                    new org.opensearch.sql.ast.tree.Regex(
+                            field("lastname"), false, stringLiteral("^[A-Z][a-z]+$"))
+                        .attach(relation("schema"))));
+    assertEquals(
+        "Regex is supported only when plugins.calcite.enabled=true", exception.getMessage());
   }
 }
